==> alexeyk13/rexos/drv/lpc/lpc_uart.c <==
#include "lpc_uart.h"
#include "lpc_power.h"
#include "../../userspace/lpc/lpc_driver.h"
#include "../../userspace/irq.h"
#include "../../userspace/stream.h"
#include "../../userspace/stdlib.h"
#include "lpc_core_private.h"
#define LPC_USART                                               LPC_USART0
#define LPC_CGU_UART0_CLOCK_BASE                                0x4005009c

void lpc_uart_on_isr(int vector, void* param)
{
    unsigned int lsr;
    int i;
    uint8_t c;
    bool more;
    UART_PORT port = UART_0;
    CORE* drv = (CORE*)param;
    if (vector != __UART_VECTORS[UART_0])
        for (i = 1; i < UARTS_COUNT; ++i)
            if (vector == __UART_VECTORS[i])
            {
                port = i;
                break;
            }
    UART* uart = drv->uart.uarts[port];

    switch (__USART_REGS[port]->IIR & USART0_IIR_INTID_Msk)
    {
    case USART0_IIR_INTID_RLS:
        //decode error, if any
        lsr = __USART_REGS[port]->LSR;
        if (lsr & USART0_LSR_OE_Msk)
            uart->error = ERROR_OVERFLOW;
        if (lsr & USART0_LSR_PE_Msk)
            uart->error = ERROR_INVALID_PARITY;
        if (lsr & USART0_LSR_FE_Msk)
            uart->error = ERROR_INVALID_FRAME;
        if (lsr & USART0_LSR_BI_Msk)
            uart->error = ERROR_COMM_BREAK;
        break;
    case USART0_IIR_INTID_RDA:
        //need more data?
        if (!lpc_uart_rx_isr(drv, port, __USART_REGS[port]->RBR))
            __USART_REGS[port]->IER &= ~USART0_IER_RBRIE_Msk;
        break;
    case USART0_IIR_INTID_THRE:
        //transmit more
        more = true;
        while ((__USART_REGS[port]->LSR & USART0_LSR_THRE_Msk) && (more = lpc_uart_tx_isr(drv, port, &c)))
                __USART_REGS[port]->THR = c;
        //no more? mask interrupt
        if (!more)
            __USART_REGS[port]->IER &= ~USART0_IER_THREIE_Msk;
        break;
    }
}

static inline void lpc_uart_set_baudrate(CORE* drv, UART_PORT port, IPC* ipc)
{
    unsigned int clock;
    BAUD baudrate;
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_CONFIGURED);
        return;
    }
    uart_decode_baudrate(ipc, &baudrate);
#ifdef LPC18xx
    clock = lpc_power_get_clock_inside(POWER_BUS_CLOCK);
#else //LPC11Uxx
    clock = lpc_power_get_core_clock_inside();
#endif //LPC18xx
    unsigned int divider = clock / (((__USART_REGS[port]->OSR >> 4) & 0x7ff) + 1 ) / baudrate.baud;
#ifdef LPC11U6x
    if (port > UART_0)
    {
        __USART1_REGS[port - 1]->CFG = ((baudrate.data_bits - 7) << USART4_CFG_DATALEN_POS) | ((baudrate.stop_bits - 1) << USART4_CFG_STOPLEN_POS);
        switch (baudrate.parity)
        {
        case 'O':
            __USART1_REGS[port - 1]->CFG |= USART4_CFG_PARITYSEL_ODD;
            break;
        case 'E':
            __USART1_REGS[port - 1]->CFG |= USART4_CFG_PARITYSEL_EVEN;
            break;
        }
        __USART1_REGS[port - 1]->BRG = divider & 0xffff;
        __USART1_REGS[port - 1]->CFG |= USART4_CFG_ENABLE
    }
    else
#endif
    {
        __USART_REGS[port]->LCR = ((baudrate.data_bits - 5) << USART0_LCR_WLS_Pos) | ((baudrate.stop_bits - 1) << USART0_LCR_SBS_Pos) | USART0_LCR_DLAB_Msk;
        switch (baudrate.parity)
        {
        case 'O':
            __USART_REGS[port]->LCR |= USART0_LCR_PE_Msk | USART0_LCR_PS_ODD;
            break;
        case 'E':
            __USART_REGS[port]->LCR |= USART0_LCR_PE_Msk | USART0_LCR_PS_EVEN;
            break;
        }
        __USART_REGS[port]->DLM = (divider >> 8) & 0xff;
        __USART_REGS[port]->DLL = divider & 0xff;
        __USART_REGS[port]->LCR &= ~USART0_LCR_DLAB_Msk;
    }
}

static inline void lpc_uart_open(CORE* drv, UART_PORT port, unsigned int mode)
{
    bool ok;
    if (drv->uart.uarts[port] != NULL)
    {
        error(ERROR_ALREADY_CONFIGURED);
        return;
    }
    drv->uart.uarts[port] = malloc(sizeof(UART));
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_OUT_OF_MEMORY);
        return;
    }
    drv->uart.uarts[port]->error = ERROR_OK;
    drv->uart.uarts[port]->io_mode = ((mode & UART_MODE) == UART_MODE_IO);

    if (drv->uart.uarts[port]->io_mode)
    {
#if (UART_IO_MODE_SUPPORT)
        ok = lpc_uart_open_io(drv, port);
#else
        ok = false;
#endif //UART_IO_MODE_SUPPORT
    }
    else
        ok = lpc_uart_open_stream(drv, port, mode);
    if (!ok)
    {
        lpc_uart_destroy(drv, port);
        return;
    }

    //power up
#ifdef LPC11Uxx
    LPC_SYSCON->SYSAHBCLKCTRL |= 1 << __UART_POWER_PINS[port];
#else //LPC18xx
    //map PLL1 output to UART clock
    ((uint32_t*)LPC_CGU_UART0_CLOCK_BASE)[port] = CGU_BASE_UART0_CLK_PD_Msk;
    ((uint32_t*)LPC_CGU_UART0_CLOCK_BASE)[port] |= CGU_CLK_PLL1;
    ((uint32_t*)LPC_CGU_UART0_CLOCK_BASE)[port] &= ~CGU_BASE_UART0_CLK_PD_Msk;
#endif //LPC11Uxx
    //remove reset state. Only for LPC11U6x
#ifdef LPC11U6x
    if (port > UART_0)
    {
        LPC_SYSCON->PRESETCTRL |= 1 << __UART_RESET_PINS[port - 1];
        if (mode & UART_RX_STREAM)
            __USART1_REGS[port - 1]->INTENCSET = USART4_INTENSET_RXRDYEN | USART4_INTENSET_OVERRUNEN | USART4_INTENSET_FRAMERREN
                                          | USART4_INTENSET_PARITTERREN | USART4_INTENSET_RXNOISEEN | USART4_INTENSET_DELTARXBRKEN;
    }
    else
#endif
    {
         //enable FIFO
        __USART_REGS[port]->FCR = USART0_FCR_FIFOEN_Msk | USART0_FCR_TXFIFORES_Msk | USART0_FCR_RXFIFORES_Msk;
    }

    //enable interrupts
#ifdef LPC11U6x
    if (port == UART_1 || port == UART_3)
    {
        if (drv->uart.uart13++ == 0)
            irq_register(__UART_VECTORS[port], lpc_uart4_on_isr, (void*)drv);
    }
    else if (port == UART_2 || port == UART_4)
    {
        if (drv->uart.uart24++ == 0)
            irq_register(__UART_VECTORS[port], lpc_uart4_on_isr, (void*)drv);
    }
    else
#endif
    {
            irq_register(__UART_VECTORS[port], lpc_uart_on_isr, (void*)drv);
    }
    NVIC_EnableIRQ(__UART_VECTORS[port]);
    NVIC_SetPriority(__UART_VECTORS[port], 2);
}

static void lpc_uart_flush(CORE* drv, UART_PORT port)
{
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_CONFIGURED);
        return;
    }
#ifdef LPC11U6x
    if (port > UART_0)
    {
        __USART1_REGS[port - 1]->INTENCLR = USART4_INTENSET_TXRDYEN;
    }
    else
#endif
    {
        __USART_REGS[port]->IER &= ~USART0_IER_THREIE_Msk;
        __USART_REGS[port]->FCR = USART0_FCR_TXFIFORES_Msk | USART0_FCR_RXFIFORES_Msk;
    }
#if (UART_IO_MODE_SUPPORT)
    if (drv->uart.uarts[port]->io_mode)
    {
        IO* rx_io;
        IO* tx_io;
        __disable_irq();
        rx_io = drv->uart.uarts[port]->i.rx_io;
        drv->uart.uarts[port]->i.rx_io = NULL;
        tx_io = drv->uart.uarts[port]->i.tx_io;
        drv->uart.uarts[port]->i.tx_io = NULL;
#if (UART_IO_PREBUFFER)
        rb_clear(&drv->uart.uarts[port]->i.rx_rb);
#endif //UART_IO_PREBUFFER
        __enable_irq();
        if (rx_io)
            io_complete_ex(drv->uart.uarts[port]->i.rx_process, HAL_IO_CMD(HAL_UART, IPC_READ), port, rx_io, ERROR_IO_CANCELLED);
        if (tx_io)
            io_complete_ex(drv->uart.uarts[port]->i.tx_process, HAL_IO_CMD(HAL_UART, IPC_WRITE), port, tx_io, ERROR_IO_CANCELLED);
        timer_stop(drv->uart.uarts[port]->i.rx_timer, port, HAL_UART);
        __USART_REGS[port]->IER &= ~USART0_IER_RBRIE_Msk;
    }
    else
#endif //UART_IO_MODE_SUPPORT
    {
        if (drv->uart.uarts[port]->s.tx_stream != INVALID_HANDLE)
        {
            stream_flush(drv->uart.uarts[port]->s.tx_stream);
            stream_listen(drv->uart.uarts[port]->s.tx_stream, port, HAL_UART);
            drv->uart.uarts[port]->s.tx_total = 0;
            __disable_irq();
            drv->uart.uarts[port]->s.tx_chunk_pos = drv->uart.uarts[port]->s.tx_chunk_size = 0;
            __enable_irq();
        }
        if (drv->uart.uarts[port]->s.rx_stream != INVALID_HANDLE)
            stream_flush(drv->uart.uarts[port]->s.rx_stream);
    }
    drv->uart.uarts[port]->error = ERROR_OK;
}

static inline void lpc_uart_close(CORE* drv, UART_PORT port)
{
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_CONFIGURED);
        return;
    }
    //disable interrupts
    NVIC_DisableIRQ(__UART_VECTORS[port]);
#ifdef LPC11U6x
    if (port == UART_1 || port == UART_3)
    {
        if (--drv->uart.uart13 == 0)
            irq_unregister(__UART_VECTORS[port]);
    }
    else if (port == UART_2 || port == UART_4)
    {
        if (--drv->uart.uart24 == 0)
            irq_unregister(__UART_VECTORS[port]);
    }
    else
#endif
    {
        irq_unregister(__UART_VECTORS[port]);
    }

    //power down
#ifdef LPC11U6x
    //set reset state. Only for LPC11U6x
    if (port > UART_0)
        LPC_SYSCON->PRESETCTRL &= ~(1 << __UART_RESET_PINS[port - 1]);
    else
#endif
    {
         //disable FIFO
         __USART_REGS[port]->FCR &= ~USART0_FCR_FIFOEN_Msk;
    }
#ifdef LPC11Uxx
    LPC_SYSCON->SYSAHBCLKCTRL &= ~(1 << __UART_POWER_PINS[port]);
#else
    ((uint32_t*)LPC_CGU_UART0_CLOCK_BASE)[port] = CGU_BASE_UART0_CLK_PD_Msk;
#endif //LPC11Uxx

    lpc_uart_flush(drv, port);
    lpc_uart_destroy(drv, port);
}

static inline HANDLE lpc_uart_get_tx_stream(CORE* drv, UART_PORT port)
{
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_CONFIGURED);
        return INVALID_HANDLE;
    }
#if (UART_IO_MODE_SUPPORT)
    if (drv->uart.uarts[port]->io_mode)
    {
        error(ERROR_INVALID_MODE);
        return INVALID_HANDLE;
    }
#endif //UART_IO_MODE_SUPPORT
    return drv->uart.uarts[port]->s.tx_stream;
}

static inline HANDLE lpc_uart_get_rx_stream(CORE* drv, UART_PORT port)
{
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_CONFIGURED);
        return INVALID_HANDLE;
    }
#if (UART_IO_MODE_SUPPORT)
    if (drv->uart.uarts[port]->io_mode)
    {
        error(ERROR_INVALID_MODE);
        return INVALID_HANDLE;
    }
#endif //UART_IO_MODE_SUPPORT
    return drv->uart.uarts[port]->s.rx_stream;
}

static inline uint16_t lpc_uart_get_last_error(CORE* drv, UART_PORT port)
{
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_CONFIGURED);
        return ERROR_OK;
    }
    return drv->uart.uarts[port]->error;
}

static inline void lpc_uart_clear_error(CORE* drv, UART_PORT port)
{
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_CONFIGURED);
        return;
    }
    drv->uart.uarts[port]->error = ERROR_OK;
}

static inline void lpc_uart_write(CORE* drv, UART_PORT port, unsigned int total)
{
    if (total)
        drv->uart.uarts[port]->s.tx_total = total;
    if (drv->uart.uarts[port]->s.tx_total == 0)
        drv->uart.uarts[port]->s.tx_total = stream_get_size(drv->uart.uarts[port]->s.tx_stream);
    if (drv->uart.uarts[port]->s.tx_total)
    {
        unsigned int to_read = drv->uart.uarts[port]->s.tx_total;
        if (drv->uart.uarts[port]->s.tx_total > UART_BUF_SIZE)
            to_read = UART_BUF_SIZE;
        if (stream_read(drv->uart.uarts[port]->s.tx_handle, drv->uart.uarts[port]->s.tx_buf, to_read))
        {
            drv->uart.uarts[port]->s.tx_chunk_pos = 1;
            drv->uart.uarts[port]->s.tx_total -= to_read;
            //prepare
#ifdef LPC11U6x
            if (port > UART_0)
                __USART1_REGS[port - 1]->TXDAT = drv->uart.uarts[port]->s.tx_buf[0];
            else
#endif
                __USART_REGS[port]->THR = drv->uart.uarts[port]->s.tx_buf[0];
            //this will enable isr processing, if printd/printk was called during setup
            drv->uart.uarts[port]->s.tx_chunk_size = to_read;
            //start
#ifdef LPC11U6x
            if (port > UART_0)
                __USART1_REGS[port - 1]->INTENSET = USART4_INTENSET_TXRDYEN;
            else
#endif
                __USART_REGS[port]->IER |= USART0_IER_THREIE_Msk;
        }
    }
    else
        stream_listen(drv->uart.uarts[port]->s.tx_stream, port, HAL_UART);

}

static inline void lpc_uart_read(CORE* drv, UART_PORT port, char c)
{
    //caching calls to svc
    if (drv->uart.uarts[port]->s.rx_free == 0)
        (drv->uart.uarts[port]->s.rx_free = stream_get_free(drv->uart.uarts[port]->s.rx_stream));
    //if stream is full, char will be discarded
    if (drv->uart.uarts[port]->s.rx_free)
    {
        stream_write(drv->uart.uarts[port]->s.rx_handle, &c, 1);
        drv->uart.uarts[port]->s.rx_free--;
    }
}

void uart_write_kernel(const char *const buf, unsigned int size, void* param)
{
    UART_PORT port = (UART_PORT)param;
    NVIC_DisableIRQ(__UART_VECTORS[port]);
    int i;
    for(i = 0; i < size; ++i)
    {
#ifdef LPC11U6x
        if (port > UART_0)
        {
            while ((__USART1_REGS[port - 1]->STAT & USART4_STAT_TXRDY) == 0) {}
            __USART1_REGS[port - 1]->TXDAT = buf[i];
        }
        else
#endif
        {
            while ((__USART_REGS[port]->LSR & USART0_LSR_THRE_Msk) == 0) {}
                __USART_REGS[port]->THR = buf[i];
        }
    }
    NVIC_EnableIRQ(__UART_VECTORS[port]);
}

void lpc_uart_init(CORE* drv)
{
    int i;
#if defined(LPC11U6x)
    LPC_SYSCON->USART0CLKDIV = 1;
    LPC_SYSCON->FRGCLKDIV = 1;
    drv->uart.uart13 = drv->uart.uart24 = 0;
#elif defined(LPC11Uxx)
    LPC_SYSCON->UARTCLKDIV = 1;
#endif
    for (i = 0; i < UARTS_COUNT; ++i)
        drv->uart.uarts[i] = NULL;
}

void lpc_uart_request(CORE* drv, IPC* ipc)
{
    UART_PORT port = ipc->param1;
    if (port >= UARTS_COUNT)
    {
        error(ERROR_INVALID_PARAMS);
        return;
    }
    switch (HAL_ITEM(ipc->cmd))
    {
    case IPC_OPEN:
        lpc_uart_open(drv, port, ipc->param2);
        break;
    case IPC_CLOSE:
        lpc_uart_close(drv, port);
        break;
    case IPC_UART_SET_BAUDRATE:
        lpc_uart_set_baudrate(drv, port, ipc);
        break;
    case IPC_FLUSH:
        lpc_uart_flush(drv, port);
        break;
    case IPC_GET_TX_STREAM:
        ipc->param2 = lpc_uart_get_tx_stream(drv, port);
        break;
    case IPC_GET_RX_STREAM:
        ipc->param2 = lpc_uart_get_rx_stream(drv, port);
        break;
    case IPC_UART_GET_LAST_ERROR:
        ipc->param2 = lpc_uart_get_last_error(drv, port);
        break;
    case IPC_UART_CLEAR_ERROR:
        lpc_uart_clear_error(drv, port);
        break;
    case IPC_UART_SETUP_PRINTK:
        lpc_uart_setup_printk(drv, port);
        break;
    case IPC_STREAM_WRITE:
    case IPC_UART_ISR_TX:
        lpc_uart_write(drv, port, ipc->param3);
        //message from kernel (or ISR), no response
        break;
    case IPC_UART_ISR_RX:
        lpc_uart_read(drv, port, ipc->param3);
        //message from ISR, no response
        break;
#if (UART_IO_MODE_SUPPORT)
    case IPC_READ:
        lpc_uart_io_read(drv, port, ipc);
        break;
    case IPC_WRITE:
        lpc_uart_io_write(drv, port, ipc);
        break;
    case IPC_TIMEOUT:
        lpc_uart_io_read_timeout(drv, port);
        break;
#endif //UART_IO_MODE_SUPPORT
    default:
        error(ERROR_NOT_SUPPORTED);
        break;
    }
}
