==> alexeyk13/rexos/sys/drv/stm32/stm32_uart.c <==
#include "stm32_uart.h"
#include "stm32_power.h"
#include "../../sys.h"
#include "error.h"
#include "../../../userspace/lib/stdlib.h"
#include "../../../userspace/lib/stdio.h"
#include "../../../userspace/stream.h"
#include "../../../userspace/direct.h"
#include "../../../userspace/irq.h"
#include "../../../userspace/object.h"
#include <string.h>
#include "stm32_core_private.h"
#define get_clock               stm32_power_get_clock_inside
#define ack_gpio                stm32_gpio_request_inside
#define get_clock               stm32_power_get_clock_outside
#define ack_gpio                stm32_core_request_outside

void stm32_uart_on_isr(int vector, void* param)
{
    IPC ipc;
    //find port by vector
    UART_PORT port;
    for (port = UART_1; port < UART_MAX && UART_VECTORS[port] != vector; ++port) {}
    SHARED_UART_DRV* drv = (SHARED_UART_DRV*)param;
#if defined(STM32L0)
#define USART_SR_TXE        USART_ISR_TXE
#define USART_SR_TC         USART_ISR_TC
#define USART_SR_PE         USART_ISR_PE
#define USART_SR_FE         USART_ISR_FE
#define USART_SR_NE         USART_ISR_NE
#define USART_SR_ORE        USART_ISR_ORE
#define USART_SR_RXNE       USART_ISR_RXNE
    unsigned int sr = UART_REGS[port]->ISR;
#else
    uint16_t sr = UART_REGS[port]->SR;
#endif

    //transmit more
    if ((UART_REGS[port]->CR1 & USART_CR1_TXEIE) && (sr & USART_SR_TXE) && drv->uart.uarts[port]->tx_chunk_size)
    {
#if defined(STM32L0)
        UART_REGS[port]->TDR = drv->uart.uarts[port]->tx_buf[drv->uart.uarts[port]->tx_chunk_pos++];
#else
        UART_REGS[port]->DR = drv->uart.uarts[port]->tx_buf[drv->uart.uarts[port]->tx_chunk_pos++];
#endif
        //no more
        if (drv->uart.uarts[port]->tx_chunk_pos >= drv->uart.uarts[port]->tx_chunk_size)
        {
            drv->uart.uarts[port]->tx_chunk_pos = drv->uart.uarts[port]->tx_chunk_size = 0;
            ipc.process = process_iget_current();
            ipc.cmd = IPC_UART_ISR_TX;
            ipc.param2 = 0;
            ipc.param3 = HAL_HANDLE(HAL_UART, port);
            ipc_ipost(&ipc);
            UART_REGS[port]->CR1 &= ~USART_CR1_TXEIE;
            UART_REGS[port]->CR1 |= USART_CR1_TCIE;

        }
    }
    //transmission completed and no more data. Disable transmitter
    else if ((UART_REGS[port]->CR1 & USART_CR1_TCIE) && (sr & USART_SR_TC) &&  (drv->uart.uarts[port]->tx_total == 0))
        UART_REGS[port]->CR1 &= ~(USART_CR1_TE | USART_CR1_TCIE);
    //decode error, if any
    if ((sr & (USART_SR_PE | USART_SR_FE | USART_SR_NE | USART_SR_ORE)))
    {
        if (sr & USART_SR_ORE)
            drv->uart.uarts[port]->error = ERROR_OVERFLOW;
        else
        {
#if defined(STM32L0)
            __REG_RC32(UART_REGS[port]->RDR);
#else
            __REG_RC32(UART_REGS[port]->DR);
#endif
            if (sr & USART_SR_FE)
                drv->uart.uarts[port]->error = ERROR_UART_FRAME;
            else if (sr & USART_SR_PE)
                drv->uart.uarts[port]->error = ERROR_UART_PARITY;
            else if  (sr & USART_SR_NE)
                drv->uart.uarts[port]->error = ERROR_UART_NOISE;
        }
    }

    //receive data
    if (sr & USART_SR_RXNE)
    {
#if defined(STM32L0)
        ipc.param1 = UART_REGS[port]->RDR;
#else
        ipc.param1 = UART_REGS[port]->DR;
#endif
        ipc.process = process_iget_current();
        ipc.cmd = IPC_UART_ISR_RX;
        ipc.param3 = HAL_HANDLE(HAL_UART, port);
        ipc_ipost(&ipc);
    }
}

void uart_write_kernel(const char *const buf, unsigned int size, void* param)
{
    NVIC_DisableIRQ(UART_VECTORS[(UART_PORT)param]);
    int i;
    UART_REGS[(UART_PORT)param]->CR1 |= USART_CR1_TE;
    for(i = 0; i < size; ++i)
    {
#if defined(STM32L0)
        while ((UART_REGS[(UART_PORT)param]->ISR & USART_ISR_TXE) == 0) {}
        UART_REGS[(UART_PORT)param]->TDR = buf[i];
#else
        while ((UART_REGS[(UART_PORT)param]->SR & USART_SR_TXE) == 0) {}
        UART_REGS[(UART_PORT)param]->DR = buf[i];
#endif
    }
    UART_REGS[(UART_PORT)param]->CR1 |= USART_CR1_TCIE;
    //transmitter will be disabled in next IRQ TC
    NVIC_EnableIRQ(UART_VECTORS[(UART_PORT)param]);
}

void stm32_uart_set_baudrate(SHARED_UART_DRV* drv, UART_PORT port, HANDLE process)
{
    BAUD baud;
    if (direct_read(process, (void*)&baud, sizeof(BAUD)))
        stm32_uart_set_baudrate_internal(drv, port, &baud);
}

void stm32_uart_open(SHARED_UART_DRV* drv, UART_PORT port, HANDLE process)
{
    UART_ENABLE ue;
    if (direct_read(process, (void*)&ue, sizeof(UART_ENABLE)))
        stm32_uart_open_internal(drv, port, &ue);
}

static inline void stm32_uart_close(SHARED_UART_DRV* drv, UART_PORT port)
{
    if (port >= UARTS_COUNT)
    {
        error(ERROR_INVALID_PARAMS);
        return;
    }
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_ACTIVE);
        return;
    }
    //disable interrupts
    NVIC_DisableIRQ(UART_VECTORS[port]);
    irq_unregister(UART_VECTORS[port]);

    //disable receiver
    if (drv->uart.uarts[port]->rx_pin != PIN_UNUSED)
        UART_REGS[port]->CR1 &= ~(USART_CR1_RE | USART_CR1_RXNEIE);
    //disable core
    UART_REGS[port]->CR1 &= ~USART_CR1_UE;
    //power down
    if (port == UART_1 || port == UART_6)
        RCC->APB2ENR &= ~(1 << UART_POWER_PINS[port]);
    else
        RCC->APB1ENR &= ~(1 << UART_POWER_PINS[port]);

    //disable pins
    if (drv->uart.uarts[port]->tx_pin != PIN_UNUSED)
    {
        stream_close(drv->uart.uarts[port]->tx_handle);
        stream_destroy(drv->uart.uarts[port]->tx_stream);
        ack_gpio(drv, GPIO_DISABLE_PIN, drv->uart.uarts[port]->tx_pin, 0, 0);
    }
    if (drv->uart.uarts[port]->rx_pin != PIN_UNUSED)
    {
        stream_close(drv->uart.uarts[port]->rx_handle);
        stream_destroy(drv->uart.uarts[port]->rx_stream);
        ack_gpio(drv, GPIO_DISABLE_PIN, drv->uart.uarts[port]->rx_pin, 0, 0);
    }

#if defined(STM32F1)
    //turn off remapping
    if (((drv->uart.uarts[port]->tx_pin != UART_TX_PINS[port]) && (drv->uart.uarts[port]->tx_pin != PIN_UNUSED)) ||
        ((drv->uart.uarts[port]->rx_pin != UART_RX_PINS[port]) && (drv->uart.uarts[port]->rx_pin != PIN_UNUSED)))
    {
        switch (drv->uart.uarts[port]->tx_pin)
        {
        case B6:
            AFIO->MAPR &= ~AFIO_MAPR_USART1_REMAP;
            break;
        case D5:
            AFIO->MAPR &= ~AFIO_MAPR_USART2_REMAP;
            break;
        case C10:
            AFIO->MAPR &= ~AFIO_MAPR_USART3_REMAP_PARTIALREMAP;
            break;
        case D8:
            AFIO->MAPR &= ~AFIO_MAPR_USART3_REMAP_FULLREMAP;
            break;
        default:
            break;
        }
        ack_gpio(drv, STM32_GPIO_DISABLE_AFIO, 0, 0, 0);
    }
#endif
    free(drv->uart.uarts[port]);
    drv->uart.uarts[port] = NULL;
}

static inline void stm32_uart_flush(SHARED_UART_DRV* drv, UART_PORT port)
{
    if (port >= UARTS_COUNT)
    {
        error(ERROR_INVALID_PARAMS);
        return;
    }
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_ACTIVE);
        return;
    }
    if (drv->uart.uarts[port]->tx_pin != PIN_UNUSED)
    {
        stream_flush(drv->uart.uarts[port]->tx_stream);
        stream_listen(drv->uart.uarts[port]->tx_stream, (void*)HAL_HANDLE(HAL_UART, port));
        drv->uart.uarts[port]->tx_total = 0;
        __disable_irq();
        drv->uart.uarts[port]->tx_chunk_pos = drv->uart.uarts[port]->tx_chunk_size = 0;
        __enable_irq();
    }
    if (drv->uart.uarts[port]->rx_pin != PIN_UNUSED)
        stream_flush(drv->uart.uarts[port]->rx_stream);
    drv->uart.uarts[port]->error = ERROR_OK;
}

static inline HANDLE stm32_uart_get_tx_stream(SHARED_UART_DRV* drv, UART_PORT port)
{
    if (port >= UARTS_COUNT)
    {
        error(ERROR_INVALID_PARAMS);
        return INVALID_HANDLE;
    }
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_ACTIVE);
        return INVALID_HANDLE;
    }
    return drv->uart.uarts[port]->tx_stream;
}

static inline HANDLE stm32_uart_get_rx_stream(SHARED_UART_DRV* drv, UART_PORT port)
{
    if (port >= UARTS_COUNT)
    {
        error(ERROR_INVALID_PARAMS);
        return INVALID_HANDLE;
    }
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_ACTIVE);
        return INVALID_HANDLE;
    }
    if (drv->uart.uarts[port]->rx_pin == PIN_UNUSED)
    {
        error(ERROR_NOT_CONFIGURED);
        return INVALID_HANDLE;
    }
    return drv->uart.uarts[port]->rx_stream;
}

static inline uint16_t stm32_uart_get_last_error(SHARED_UART_DRV* drv, UART_PORT port)
{
    if (port >= UARTS_COUNT)
    {
        error(ERROR_INVALID_PARAMS);
        return ERROR_OK;
    }
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_ACTIVE);
        return ERROR_OK;
    }
    return drv->uart.uarts[port]->error;
}

static inline void stm32_uart_clear_error(SHARED_UART_DRV* drv, UART_PORT port)
{
    if (port >= UARTS_COUNT)
    {
        error(ERROR_INVALID_PARAMS);
        return;
    }
    if (drv->uart.uarts[port] == NULL)
    {
        error(ERROR_NOT_ACTIVE);
        return;
    }
    drv->uart.uarts[port]->error = ERROR_OK;
}

void stm32_uart_write(SHARED_UART_DRV* drv, UART_PORT port, unsigned int total)
{
    if (total)
        drv->uart.uarts[port]->tx_total = total;
    if (drv->uart.uarts[port]->tx_total == 0)
        drv->uart.uarts[port]->tx_total = stream_get_size(drv->uart.uarts[port]->tx_stream);
    if (drv->uart.uarts[port]->tx_total)
    {
        unsigned int to_read = drv->uart.uarts[port]->tx_total;
        if (drv->uart.uarts[port]->tx_total > UART_TX_BUF_SIZE)
            to_read = UART_TX_BUF_SIZE;
        if (stream_read(drv->uart.uarts[port]->tx_handle, drv->uart.uarts[port]->tx_buf, to_read))
        {
            drv->uart.uarts[port]->tx_chunk_pos = 0;
            drv->uart.uarts[port]->tx_chunk_size = to_read;
            drv->uart.uarts[port]->tx_total -= to_read;
            //start transaction
            UART_REGS[port]->CR1 |= USART_CR1_TE | USART_CR1_TXEIE;
        }
    }
    else
        stream_listen(drv->uart.uarts[port]->tx_stream, (void*)HAL_HANDLE(HAL_UART, port));

}

static inline void stm32_uart_read(SHARED_UART_DRV* drv, UART_PORT port, char c)
{
    //caching calls to svc
    if (drv->uart.uarts[port]->rx_free == 0)
        (drv->uart.uarts[port]->rx_free = stream_get_free(drv->uart.uarts[port]->rx_stream));
    //if stream is full, char will be discarded
    if (drv->uart.uarts[port]->rx_free)
    {
        stream_write(drv->uart.uarts[port]->rx_handle, &c, 1);
        drv->uart.uarts[port]->rx_free--;
    }
}

bool stm32_uart_request(SHARED_UART_DRV* drv, IPC* ipc)
{
    bool need_post = false;
    switch (ipc->cmd)
    {
#if (SYS_INFO)
    case IPC_GET_INFO:
        stm32_uart_info(drv);
        need_post = true;
        break;
#endif
    case IPC_OPEN:
        stm32_uart_open(drv, HAL_ITEM(ipc->param1), ipc->process);
        need_post = true;
        break;
    case IPC_CLOSE:
        stm32_uart_close(drv, HAL_ITEM(ipc->param1));
        need_post = true;
        break;
    case IPC_UART_SET_BAUDRATE:
        stm32_uart_set_baudrate(drv, HAL_ITEM(ipc->param1), ipc->process);
        need_post = true;
        break;
    case IPC_FLUSH:
        stm32_uart_flush(drv, HAL_ITEM(ipc->param1));
        need_post = true;
        break;
    case IPC_GET_TX_STREAM:
        ipc->param1 = stm32_uart_get_tx_stream(drv, HAL_ITEM(ipc->param1));
        need_post = true;
        break;
    case IPC_GET_RX_STREAM:
        ipc->param1 = stm32_uart_get_rx_stream(drv, HAL_ITEM(ipc->param1));
        need_post = true;
        break;
    case IPC_UART_GET_LAST_ERROR:
        ipc->param1 = stm32_uart_get_last_error(drv, HAL_ITEM(ipc->param1));
        need_post = true;
        break;
    case IPC_UART_CLEAR_ERROR:
        stm32_uart_clear_error(drv, HAL_ITEM(ipc->param1));
        need_post = true;
        break;
    case IPC_STREAM_WRITE:
    case IPC_UART_ISR_TX:
        stm32_uart_write(drv, HAL_ITEM(ipc->param3), ipc->param2);
        //message from kernel (or ISR), no response
        break;
    case IPC_UART_ISR_RX:
        stm32_uart_read(drv, HAL_ITEM(ipc->param3), ipc->param1);
        //message from ISR, no response
        break;
    default:
        error(ERROR_NOT_SUPPORTED);
        need_post = true;
        break;
    }
    return need_post;
}

void stm32_uart_init(SHARED_UART_DRV* drv)
{
    int i;
    for (i = 0; i < UARTS_COUNT; ++i)
        drv->uart.uarts[i] = NULL;
#if (UART_STDIO)
    stm32_uart_open_stdio(drv);
#endif //UART_STDIO
}
